[package]
name = "visto"
version = "0.1.0"
edition = "2021"

# Compiled as a library to allow extensions to access the server's interface
[lib]
name = "visto"
path = "src/main.rs"
crate-type = ["dylib"]

[[bin]]
name = "visto"
path = "src/main.rs"

[dependencies]
lazy_static = "1.4.0"
libc = "^0.2"
libloading = "0.7.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[profile.release]
lto = true
strip = true
