[package]
name = "visto"
version = "0.1.0"
edition = "2021"

# Compiled as a library to allow extensions to access the server's interface
[lib]
name = "visto"
path = "src/main.rs"
crate-type = ["rlib"]

[[bin]]
name = "visto"
path = "src/main.rs"

[dependencies]
lazy_static = "1.4.0"
libc = "^0.2"
libloading = "0.8.0"
